# telegramfaucetbot

./: README.rst  pyproject.toml
faucet_bot/: __init__.py
